[gd_scene load_steps=4 format=3 uid="uid://035l8y7rph61"]

[ext_resource type="Script" path="res://scripts/title_screen/title_screen_popup.gd" id="1_ute57"]
[ext_resource type="Texture2D" uid="uid://dir4dlv1w8dtl" path="res://assets/backgrounds/title_popup_background.png" id="2_1shrh"]
[ext_resource type="PackedScene" uid="uid://ddld1qiaul0bw" path="res://scenes/cookbook_generator.tscn" id="3_ogw7s"]

[node name="TitleScreenPopup" type="CanvasLayer"]
script = ExtResource("1_ute57")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(700, 394)
texture = ExtResource("2_1shrh")

[node name="CreditsLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 25.0
offset_top = 25.0
offset_right = 1375.0
offset_bottom = 675.0
text = "Credits and Sources:

Kyle and Robot Party Chat: Setting and Character Ideas

lkb: Character Portraits

PiiiXL, Azuna Pixels, Henry Software, GhostPixxells, Deep Dive Game Studio, Bagong Games, poppants: Various Pixel Art Icons

SpinachChicken: Wood Tiles

Starry Skydancer: Wood Background

Burning Pants: TV Background

"

[node name="LicensesLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 25.0
offset_top = 25.0
offset_right = 1375.0
offset_bottom = 675.0
text = "    This game uses Godot Engine, available under the following license:

    Copyright (c) 2014-present Godot Engine contributors. Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


Portions of this software are copyright Â© 2023 The FreeType Project (www.freetype.org). All rights reserved.


    Copyright (c) 2002-2020 Lee Salzman

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


    Copyright The Mbed TLS Contributors

    Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
"

[node name="InstructionsLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 25.0
offset_top = 25.0
offset_right = 1375.0
offset_bottom = 675.0
text = "Make food by building structures on the grid, then placing food on them.

Turn on Build Mode, then click a building and click a place on the grid to build it.

When not in Build Mode, you can click on a tile to see what's in it, and buy food from the Warehouse.

Then you can take food from either the sidebar or the Warehouse, which makes it your current item. Then you can click to put it into tiles to make new food, often in combination with other food items.

Once you have an order, you can submit it by holding it and clicking Submit Order. If too many orders stack up you'll fail the day, so be careful!

Once you put an item in a tile, you can't get it back (unless you make something new with it), so use your inventory in the lower-left corner to store items for later use."

[node name="CookbookFoodLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 25.0
offset_top = 25.0
offset_right = 675.0
offset_bottom = 675.0

[node name="CookbookBuildingLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 700.0
offset_top = 25.0
offset_right = 1350.0
offset_bottom = 675.0

[node name="OptionsBox" type="VBoxContainer" parent="."]
offset_left = 500.0
offset_top = 25.0
offset_right = 900.0
offset_bottom = 675.0

[node name="MoneyButton" type="CheckButton" parent="OptionsBox"]
layout_mode = 2
text = "Lots of Money"

[node name="TimerButton" type="CheckButton" parent="OptionsBox"]
layout_mode = 2
text = "Slow Order Timers"

[node name="CloseButton" type="Button" parent="."]
offset_left = 500.0
offset_top = 732.0
offset_right = 900.0
offset_bottom = 763.0
text = "Close"

[node name="CookbookGenerator" parent="." instance=ExtResource("3_ogw7s")]

[connection signal="toggled" from="OptionsBox/MoneyButton" to="." method="_on_money_button_toggled"]
[connection signal="toggled" from="OptionsBox/TimerButton" to="." method="_on_timer_button_toggled"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
